Roxo-V6_12-28-2016/objects/US_Account_Target__c.object
<CustomObject>
    <fields>
        <fullName>Bonus__c</fullName>
        <defaultValue>&apos;N&apos;</defaultValue>
        <label>Bonus</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Counts_Towards_Achievement__c</fullName>
        <label>Counts Towards Achievement</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Denom__c</fullName>
        <label>Denom</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FULL_TXT__c</fullName>
        <description>FULL_TXT</description>
        <label>FULL_TXT</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Num__c</fullName>
        <label>Num</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sap_color__c</fullName>
        <description>Hold the Achievement score color</description>
        <formula>CASE( Acheivement_Score__c , 0, &apos;Red&apos;, 1,&apos;Yellow&apos;,2,&apos;Green&apos;,&apos;Green&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sap color</label>
        <type>Text</type>
    </fields>
</CustomObject>